# HobbyImageProcessing

./: README.md
ImgEq/: CMakeLists.txt  SequencialEQ.cpp  SequencialEQ.h  main.cpp  notes.txt
